<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.authentication.VerifyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding_verify_fragment">

        <ImageView
                android:id="@+id/email_verified_image_verify_fragment"
                android:src="@drawable/email_verified_image"
                android:contentDescription="@string/content_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="0.5"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_height_verify_fragment"
                android:layout_marginTop="@dimen/margin_top_image_verify_fragment" />

        <TextView
                android:id="@+id/title_verify_fragment"
                android:text="@string/ops_your_email_has_not_been_verified"
                android:textSize="@dimen/title_text_size_verify_fragment"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/email_verified_image_verify_fragment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="@dimen/title_text_width_verify_fragment"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_title_text_verify_fragment" />

        <TextView
                android:id="@+id/description_verify_fragment"
                android:textAlignment="center"
                android:text="@string/content_description_verify_fragment"
                android:textSize="@dimen/des_text_size_verify_fragment"
                app:layout_constraintTop_toBottomOf="@id/title_verify_fragment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="@dimen/des_text_width_verify_fragment"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_des_text_verify_fragment" />

        <Button
                android:id="@+id/btn_resend_verify_fragment"
                android:text="@string/resend"
                android:textColor="?attr/colorPrimaryText"
                android:textSize="@dimen/text_size_btn_verify_fragment"
                android:textAllCaps="false"
                android:background="@drawable/resend_code_btn_bg"
                app:layout_constraintTop_toBottomOf="@id/description_verify_fragment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_check_now_verify_fragment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.45"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_btn_verify_fragment"
                android:layout_marginTop="@dimen/margin_top_btn_verify_fragment" />

        <Button
                android:id="@+id/btn_check_now_verify_fragment"
                android:text="@string/check_now"
                android:textColor="?attr/white"
                android:textSize="@dimen/text_size_btn_verify_fragment"
                android:textAllCaps="false"
                android:background="@drawable/orange_gradient_button_background"
                app:layout_constraintTop_toBottomOf="@id/description_verify_fragment"
                app:layout_constraintLeft_toRightOf="@id/btn_resend_verify_fragment"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.45"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_btn_verify_fragment"
                android:layout_marginTop="@dimen/margin_top_btn_verify_fragment" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>