<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.authentication.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_forgot_password_fragment"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/orange_gradient_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forgot_password_fragment_header_height">

            <TextView
                    android:id="@+id/app_logo_forgot_password_fragment"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/content_description"
                    android:text="@string/app_name"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_forgot_password_fragment"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back" />

        <TextView
                android:id="@+id/tv_title_forgot_password_fragment"
                android:text="@string/title_forgot_password"
                android:textSize="@dimen/forgot_password_title_text_size"
                android:layout_marginTop="@dimen/margin_top_title_text_forgot_password_fragment"
                android:textColor="?attr/colorPrimaryText"
                app:layout_constraintTop_toBottomOf="@id/header_forgot_password_fragment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/tv_title_description_forgot_password_fragment"
                android:layout_marginStart="@dimen/margin_start_and_end_desc_text_forgot_password_fragment"
                android:layout_marginEnd="@dimen/margin_start_and_end_desc_text_forgot_password_fragment"
                android:layout_marginTop="@dimen/margin_top_desc_text_forgot_password_fragment"
                android:gravity="center"
                android:text="@string/forgot_password_title_description"
                android:textSize="@dimen/forgot_password_title_description_text_size"
                android:textColor="?attr/colorPrimaryText"
                app:layout_constraintTop_toBottomOf="@id/tv_title_forgot_password_fragment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_forgot_password_fragment"
                android:theme="@style/AppTheme.Material"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="35dp"
                android:hint="@string/et_hint_email_id"
                android:textColorHint="?attr/colorSecondaryText"
                app:layout_constraintTop_toBottomOf="@id/tv_title_description_forgot_password_fragment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_forgot_password_fragment"
                    android:inputType="textEmailAddress"
                    android:theme="@style/AppTheme.Material"
                    android:padding="8dp"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_submit_forgot_password_fragment"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/btn_lnl_submit"
                android:textAllCaps="false"
                android:textColor="?attr/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/til_email_forgot_password_fragment"
                android:background="@drawable/orange_gradient_button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>