<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.authentication.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_register_fragment"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back">

            <TextView
                    android:id="@+id/title_register_fragment"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:text="@string/create_an_account"
                    android:paddingStart="@dimen/toolbar_title_paddingStart"
                    android:paddingEnd="0dp"
                    android:textSize="@dimen/toolbar_title_size"
                    android:textColor="?attr/colorPrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/toolbar_register_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/AppTheme.Material"
                    android:id="@+id/til_full_name_register_fragment"
                    android:layout_marginStart="@dimen/margin_start_and_end_til_register_fragment"
                    android:layout_marginEnd="@dimen/margin_start_and_end_til_register_fragment"
                    android:layout_marginTop="@dimen/margin_top_til_register_fragment"
                    android:hint="@string/hint_full_name"
                    android:textColorHint="?attr/colorSecondaryText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText

                        android:theme="@style/AppTheme.Material"
                        android:id="@+id/et_full_name_register_fragment"
                        android:padding="@dimen/content_padding_til_register_fragment"
                        android:inputType="text"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/AppTheme.Material"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/til_username_register_fragment"
                    android:layout_marginStart="@dimen/margin_start_and_end_til_register_fragment"
                    android:layout_marginEnd="@dimen/margin_start_and_end_til_register_fragment"
                    android:layout_marginTop="@dimen/margin_top_til_register_fragment"
                    android:hint="@string/et_hint_username"
                    android:textColorHint="?attr/colorSecondaryText"
                    app:layout_constraintTop_toBottomOf="@id/til_full_name_register_fragment"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username_register_fragment"
                        android:theme="@style/AppTheme.Material"
                        android:padding="@dimen/content_padding_til_register_fragment"
                        android:inputType="text"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/AppTheme.Material"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/til_email_register_fragment"
                    android:layout_marginStart="@dimen/margin_start_and_end_til_register_fragment"
                    android:layout_marginEnd="@dimen/margin_start_and_end_til_register_fragment"
                    android:layout_marginTop="@dimen/margin_top_til_register_fragment"
                    android:hint="@string/et_hint_email"
                    android:textColorHint="?attr/colorSecondaryText"
                    app:layout_constraintTop_toBottomOf="@id/til_username_register_fragment"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_register_fragment"
                        android:inputType="textEmailAddress"
                        android:theme="@style/AppTheme.Material"
                        android:padding="@dimen/content_padding_til_register_fragment"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/AppTheme.Material"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/til_password_register_fragment"
                    android:layout_marginStart="@dimen/margin_start_and_end_til_register_fragment"
                    android:layout_marginEnd="@dimen/margin_start_and_end_til_register_fragment"
                    android:layout_marginTop="@dimen/margin_top_til_register_fragment"
                    android:hint="@string/et_hint_password"
                    app:endIconMode="password_toggle"
                    android:textColorHint="?attr/colorSecondaryText"
                    app:layout_constraintTop_toBottomOf="@id/til_email_register_fragment"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_register_fragment"
                        android:inputType="textPassword"
                        android:theme="@style/AppTheme.Material"
                        android:padding="@dimen/content_padding_til_register_fragment"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/AppTheme.Material"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/til_confirm_password_register_fragment"
                    android:layout_marginStart="@dimen/margin_start_and_end_til_register_fragment"
                    android:layout_marginEnd="@dimen/margin_start_and_end_til_register_fragment"
                    android:layout_marginTop="@dimen/margin_top_til_register_fragment"
                    android:hint="@string/et_hint_confirm_password"
                    app:endIconMode="password_toggle"
                    android:textColorHint="?attr/colorSecondaryText"
                    app:layout_constraintTop_toBottomOf="@id/til_password_register_fragment"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_confirm_password_register_fragment"
                        android:inputType="textPassword"
                        android:theme="@style/AppTheme.Material"
                        android:padding="@dimen/content_padding_til_register_fragment"
                        android:background="@null"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                    android:id="@+id/checkbox_register_fragment"
                    app:layout_constraintTop_toBottomOf="@id/til_confirm_password_register_fragment"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="@dimen/margin_top_checkbox_and_btn_register_fragment"
                    android:text="@string/i_agree_to_the_terms_and_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <Button
                    android:id="@+id/btn_register_register_fragment"
                    app:layout_constraintTop_toBottomOf="@id/checkbox_register_fragment"
                    android:text="@string/btn_lbl_register"
                    android:textAllCaps="false"
                    android:textSize="@dimen/btn_text_size"
                    android:textColor="?attr/white"
                    android:background="@drawable/orange_gradient_button_background"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="@dimen/margin_top_checkbox_and_btn_register_fragment"
                    android:layout_marginStart="@dimen/margin_start_and_end_register_btn_register_fragment"
                    android:layout_marginEnd="@dimen/margin_start_and_end_register_btn_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            <TextView
                    android:id="@+id/already_have_an_account_register_fragment"
                    android:text="@string/already_have_an_account"
                    app:layout_constraintTop_toBottomOf="@id/btn_register_register_fragment"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/tv_login_register_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:layout_marginTop="@dimen/margin_top_login_tv_register_fragment"
                    android:layout_marginEnd="8dp" />

            <TextView
                    android:id="@+id/tv_login_register_fragment"
                    android:text="@string/login"
                    app:layout_constraintTop_toBottomOf="@id/btn_register_register_fragment"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/already_have_an_account_register_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_login_tv_register_fragment" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>