<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.authentication.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_welcome_fragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/body_welcome_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/orange_gradient_background">

        <ImageView
                android:id="@+id/welcome_image_welcome_fragment"
                android:src="@drawable/welcome_image"
                android:contentDescription="@string/content_description"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/title_header_welcome_fragment"
                android:layout_width="0dp"
                android:layout_height="0dp" />

        <TextView
                android:id="@+id/title_header_welcome_fragment"
                android:text="@string/hi_there"
                android:textAlignment="center"
                android:textSize="@dimen/title_size_header_welcome_fragment"
                android:textColor="?attr/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/welcome_image_welcome_fragment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body_welcome_fragment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.4"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <TextView
                android:id="@+id/title_body_welcome_fragment"
                android:text="@string/select_language"
                android:textSize="@dimen/title_size_body_welcome_fragment"
                android:textColor="?attr/colorPrimaryText"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/margin_top_title_and_spinner_body_welcome_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <Spinner
                android:id="@+id/sp_language_welcome_fragment"
                app:layout_constraintTop_toBottomOf="@id/title_body_welcome_fragment"
                android:background="@drawable/spinner_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="0.8"
                android:layout_marginTop="@dimen/margin_top_title_and_spinner_body_welcome_fragment"
                android:paddingStart="@dimen/padding_start_and_end_spinner_welcome_fragment"
                android:paddingEnd="@dimen/padding_start_and_end_spinner_welcome_fragment"
                android:layout_width="0dp"
                android:layout_height="@dimen/spinner_and_button_height_welcome_fragment" />

        <Button
                android:id="@+id/btn_get_started_welcome_fragment"
                android:text="@string/get_started"
                android:textColor="?attr/white"
                android:textSize="@dimen/get_started_btn_text_size_welcome_fragment"
                app:layout_constraintTop_toBottomOf="@id/sp_language_welcome_fragment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="0.8"
                android:layout_marginTop="@dimen/margin_top_title_and_spinner_body_welcome_fragment"
                android:background="@drawable/orange_gradient_button_background"
                android:layout_width="0dp"
                android:layout_height="@dimen/spinner_and_button_height_welcome_fragment" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>